--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,22 +1,22 @@
 name: CI
 
-  on:
-    push: 
-      branches: [ data ]
-    pull-request: 
-      branches: [ data ]
-    workflow_dispatch:
+on:
+  push: 
+    branches: [ data ]
+  pull_request: 
+    branches: [ data ]
+  workflow_dispatch:
 
-  jobs:
-    build:
-      runs-on: ubuntu-latest
+jobs:
+  build:
+    runs-on: ubuntu-latest
 
-      steps:
-        - uses: actions/checkout@v2
+    steps:
+      - uses: actions/checkout@v2
 
-        - name: Run a one-line script 
-          run: echo This repo has been pulled or pushed 
+      - name: Run a one-line script 
+        run: echo This repo has been pulled or pushed 
 
-        - name: Run a multi-line script
-          run: echo new push or pull added 
+      - name: Run a multi-line script
+        run: echo new push or pull added 
     
