--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -14,9 +14,18 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Run a one-line script 
-        run: echo This repo has been pulled or pushed 
+      - name: List all files 
+        run: ls 
 
-      - name: Run a multi-line script
-        run: echo new push or pull added 
+      - name: Install python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.10' 
+      - run: python .env/fin_proj/create_file.py
+
+
+      - name: List all files 
+        run: ls 
+
+     
     
