--- a/.env/fin_proj/dbt_project.yml
+++ b/.env/fin_proj/dbt_project.yml
@@ -6,6 +6,12 @@ name: 'fin_proj'
 version: '1.0.0'
 config-version: 2
 
+vars:
+   fin_proj:
+        username: sa
+        password: K@roukzeno1
+   
+
 # This setting configures which "profile" dbt uses for this project.
 profile: 'fin_proj'
 
